--- a/package.json
+++ b/package.json
@@ -11,20 +11,21 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.1",
     "@testing-library/user-event": "^12.2.0",
-    "bootstrap": "^4.5.3",
+    "bootstrap": "^4.6.0",
     "bulma": "^0.9.1",
     "gh-pages": "^3.1.0",
     "hamburger-react": "^2.3.0",
     "hamburgers": "^1.1.3",
     "react": "^17.0.1",
     "react-animated-burgers": "^1.2.8",
-    "react-bootstrap": "^1.4.0",
+    "react-bootstrap": "^1.5.2",
     "react-bulma-components": "^3.4.0",
     "react-burger-menu": "^2.9.0",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
     "react-particles-js": "^3.4.1",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-tilt": "^0.1.4",
     "react-vertical-timeline-component": "^3.3.3",
