--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^12.2.0",
     "bootstrap": "^4.6.0",
     "bulma": "^0.9.1",
+    "chokidar": "^3.5.3",
     "gh-pages": "^3.1.0",
     "hamburger-react": "^2.3.0",
     "hamburgers": "^1.1.3",
