--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^1.5.2",
     "react-bulma-components": "^3.4.0",
     "react-burger-menu": "^2.9.0",
+    "react-calendly": "^4.1.1",
     "react-dom": "^17.0.1",
     "react-parallax": "^3.1.2",
     "react-particles-js": "^3.4.1",
